--- a/mkbus/color/index.html
+++ b/mkbus/color/index.html
@@ -19,6 +19,7 @@
     <a name="60">2</a>
     <a name="61">2</a>
     <a name="108">2</a>
+    <a name="112">2</a>
     <a name="119">2</a>
     <a name="130">2</a>
     <a name="150">2</a>
